--- a/src/views/ticketView.handlebars
+++ b/src/views/ticketView.handlebars
@@ -4,21 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Ticket Information</title>
+    <title>{{title}}</title>
 </head>
 <body>
     <header class="bg-light py-3">
         <div class="container">
             <div class="d-flex align-items-center">
                 <img src="/img/main-logo.png" alt="Main Logo" class="me-3">
+                
                 <div class="flex-grow-1 text-center">
-                    <h2>Ticket Information</h2>
+                    <h2>Checkout Information</h2>
                 </div>
-                <div class="d-flex align-items-center">
-                    <a href="/logout" class="btn btn-outline-danger me-2">Logout</a>
-                    <a href="/register" class="btn btn-outline-primary">Register</a>
+                
+                <div class="d-flex flex-column align-items-start">
+                    <div class="d-flex align-items-center mb-1">
+                        <div class="me-3">
+                            Welcome {{#if isLoggedIn}}{{user}}{{else}}user{{/if}}!
+                        </div>
+                        {{#if isLoggedIn}}
+                            <small class="me-3" data-user-role="{{role}}">Role: {{role}}</small>
+                        {{/if}}
+                    </div>
+                    <div class="d-flex align-items-center mt-2">
+                        {{#if isLoggedIn}}
+                            <a href="/logout" class="btn btn-outline-danger btn-sm">Logout</a>
+                        {{else}}
+                            <a href="/login" class="btn btn-outline-primary btn-sm">Login</a>
+                        {{/if}}
+                    </div>
                 </div>
-            </div>
         </div>
     </header>
 
@@ -28,7 +42,7 @@
                 <div class="card-body">
 
                     <p><strong>Purchaser:</strong> {{ticket.purchaser}}</p>
-                    <p><strong>Amount:</strong> {{ticket.amount}} (Not processed products won't be charged)</p>
+                    <p><strong>Amount:</strong> ${{ticket.amount}} (Not processed products won't be charged)</p>
                     <p><strong>Purchase Date:</strong> {{ticket.purchase_datetime}}</p>
                     <p><strong>Ticket Code:</strong> {{ticket.code}}</p>
 
