--- a/src/views/homeView.handlebars
+++ b/src/views/homeView.handlebars
@@ -128,8 +128,10 @@
                         <p class="card-text">Owner: {{this.owner}}</p>
 
                         {{#if ../isLoggedIn}}
-                            {{#if (or ../isAdmin (and (not (or (eq this.owner ../myUser.email) (eq this.owner ../myUser.user))) (not (isPremium))))}}
-                                <button type="button" class="btn btn-primary me-2 mb-2 add-to-cart-btn" data-product-id="{{this._id}}" data-cart-id="{{cartId}}">Add to Cart</button>
+                            {{#if (not ../isAdmin)}}
+                                {{#if (and (not (or (eq this.owner ../myUser.email) (eq this.owner ../myUser.user))) (not (isPremium)))}}
+                                    <button type="button" class="btn btn-primary me-2 mb-2 add-to-cart-btn" data-product-id="{{this._id}}" data-cart-id="{{cartId}}">Add to Cart</button>
+                                {{/if}}
                             {{/if}}
                             {{#if (or ../isAdmin (and ../isPremium (or (eq this.owner ../myUser.email) (eq this.owner ../myUser.user))))}}
                                 <button type="button" class="btn btn-danger me-2 mb-2 deleteButton" data-product-id="{{this._id}}">Delete Product</button>
@@ -142,7 +144,7 @@
             </div>
         {{/each}}
 
-       {{#if isLoggedIn}}
+        {{#if (and isLoggedIn (not isAdmin))}}
             <div class="d-flex justify-content-center my-4">
                 <button type="button" class="btn btn-success finishPurchase" data-product-id="{{productId}}" data-cart-id="{{cartId}}">View Cart</button>
             </div>
