--- a/src/views/homeView.handlebars
+++ b/src/views/homeView.handlebars
@@ -127,6 +127,12 @@
                         <p class="card-text">Category: {{this.category}}</p>
                         <p class="card-text">Owner: {{this.owner}}</p>
 
+                         <div class="position-absolute bottom-2 end-0 me-2">
+                            <div class="bg-secondary text-white rounded-pill py-1 px-2 d-inline-flex align-items-center">
+                                <span class="item-count bg-secondary text-white rounded-circle py-1 px-2 fs-6" data-product-id="{{this._id}}">0</span>
+                            </div>
+                        </div>
+
                         {{#if ../isLoggedIn}}
                             {{#if (not ../isAdmin)}}
                                 {{#if (and (not (or (eq this.owner ../myUser.email) (eq this.owner ../myUser.user))) (not (isPremium)))}}
